<resources>
    <string name="app_name">包小鉴</string>

    <string name="app_name_CN">包小鉴</string>

    <string name="person_login">手机号登录</string>
    <string name="enterprise_login">企业账号登录</string>

    <string name="enter_phonenumber">请输入手机号|</string>
    <string name="vertify_code">验证码|</string>
    <string name="login">登录</string>
    <string name="click_login">点击登录</string>
    <string name="account_password">账号密码|</string>
    <string name="enterprise_login_new">企业账号登录|</string>
    <string name="get_vertifycode">获取验证码</string>
    <string name="login_other_way">选择其他方式登录</string>
    <string name="tickcheckbox_tip">请勾选用户协议与隐私政策</string>

    <string name="appraisal">鉴定</string>
    <string name="person">我的</string>

    <string name="edit_info">编辑资料</string>
    <string name="back">返回</string>
    <string name="profile_image">头像</string>
    <string name="nikename">昵称</string>
    <string name="region">地区</string>
    <string name="sex">性别</string>
    <string name="save">保存</string>

    <string name="setting">设置</string>
    <string name="aboutbaobao">关于包小鉴</string>
    <string name="feedAndSuggestion">反馈与建议</string>
    <string name="contactus">联系我们</string>
    <string name="offline">退出登录</string>
    <string name="contactus_toast">如果您想要与我们合作或想获得任何技术支持，请联系微信18351922280</string>

    <string name="userevaluate">用户评价</string>

    <string name="clicktoshare">点击分享给好友</string>
    <string name="rateus">给我们评分</string>
    <string name="corporate_info">公司信息</string>
    <string name="user_protocal">《用户协议》</string>
    <string name="private_policy">《隐私政策》</string>
    <string name="IP">©2019 TuringSense All rights Reserved</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
    <string name="friendcircle">朋友圈</string>

    <string name="appraisalNotice">鉴定须知</string>
    <string name="needappraisalPoint">鉴定所需鉴定点</string>
    <string name="greenNotice">鉴定新手必看</string>
    <string name="gotoAppraisal">去鉴定</string>
    <string name="greenhandnotice">新手必看</string>


    <string name="lookupCase">查看案例</string>
    <string name="usePhoto">调用相册</string>
    <string name="confirm">确认</string>

    <string name="isdetecting">鉴定正在检测中</string>
    <string name="pointinvalid">您拍摄的图片不满足拍摄条件或不在鉴定范围</string>
    <string name="pointsuccess">鉴定点拍摄成功</string>

    <string name="appraisalerrorcase_1">有必选鉴定点未鉴定，请先拍摄</string>
    <string name="appraisalerrorcase_2">有鉴定点正在鉴定，请等待鉴定完成</string>
    <string name="appraisalerrorcase_3">有必选鉴定点鉴定失败，请重新拍摄</string>

    <string name="appraisal_result">鉴定结果</string>
    <string name="singnal_point_credit">单项鉴定分数</string>
    <string name="generate_report">生成鉴定报告</string>
    <string name="savetogallary">保存到相册</string>
    <string name="current_credit">当前积分</string>
    <string name="daily_signin">每日签到</string>
    <string name="enterprise_user">企业用户</string>
    <string name="hassignin">已签到</string>
    <string name="successsignin">签到成功</string>
    <string name="signinstring1">恭喜获得10积分</string>
    <string name="signinad">如果您想成为商家充值积分或遇到问题请联系微信18351922280</string>

    <string name="pointwarning">每次鉴定需要消耗10积分，您可以在个人中心页进行每日签到，签到一次可获取10积分~</string>

    <string name="logintip">登录后才可以使用鉴定功能哦！</string>
    <string name="loginnow">立即登录</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="thirdparty_failure">第三方登录失败</string>


    <string name="bind_phoneNum">绑定手机号</string>
    <string name="enter_verifycode">请输入验证码</string>
    <string name="enter_phoneNum">请输入手机号</string>
    <string name="wronginfo">输入信息有误</string>
    <string name="weibocancel">已取消</string>
    <string name="openweixin">正在打开微信</string>


    <string name="openweibo">正在打开微博</string>

    <string name="openweib">正在打开微博</string>

    <string name="openweib1">正在打开微博</string>



</resources>
