<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".baoxiaojianapp.activity.InfoSettingActivity">

    <RelativeLayout
        android:id="@+id/back_layout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="32dp">
        <Button
            android:id="@+id/back_button"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:background="@drawable/backarrow"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/back_button"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/editinfo_layout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#F4F4F4"
        android:padding="10dp">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            />
        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/app_name_CN"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/share_button"
            android:layout_below="@+id/app_name_text"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/clicktoshare"
            android:background="@drawable/offline_button_background"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RateLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/settingTextStyle"
            android:layout_marginLeft="24dp"
            android:text="@string/rateus"
            />
        <Button
            style="@style/indicatorStyle"/>
    </RelativeLayout>
    <include layout="@layout/divider"/>
    <RelativeLayout
        android:id="@+id/corporateInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/settingTextStyle"
            android:layout_marginLeft="24dp"
            android:text="@string/corporate_info"
            />
        <TextView
            android:id="@+id/region_textview"
            style="@style/settingTextStyle"
            android:layout_marginRight="45dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            />
        <Button
            style="@style/indicatorStyle"/>
    </RelativeLayout>
    <include layout="@layout/divider"/>

</LinearLayout>