<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".baoxiaojianapp.activity.InfoSettingActivity"
    android:id="@+id/container_layout">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/back_layout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="32dp">
        <Button
            android:id="@+id/back_button"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:background="@drawable/backarrow"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/back_button"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="59dp"
        android:layout_height="28dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_info"
        android:textSize="14sp"
        />
    <RelativeLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/settingTextStyle"
            android:layout_marginLeft="24dp"
            android:text="@string/profile_image"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_alignParentEnd="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="45dp"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            />
        <Button
            style="@style/indicatorStyle"/>
    </RelativeLayout>
    <include layout="@layout/divider"/>
    <RelativeLayout
        android:id="@+id/nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/settingTextStyle"
            android:layout_marginLeft="24dp"
            android:text="@string/nikename"
            />
        <TextView
            android:id="@+id/nickname_textview"
            style="@style/settingTextStyle"
            android:layout_marginRight="45dp"
            android:singleLine="true"
            android:layout_width="200dp"
            android:ellipsize="end"
            android:gravity="right"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            />
        <Button
            style="@style/indicatorStyle"/>
    </RelativeLayout>
    <include layout="@layout/divider"/>
    <RelativeLayout
        android:id="@+id/region_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/settingTextStyle"
            android:layout_marginLeft="24dp"
            android:text="@string/region"
            />
        <TextView
            android:id="@+id/region_textview"
            style="@style/settingTextStyle"
            android:layout_width="200dp"
            android:layout_marginRight="45dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="right"
            />
        <Button
            style="@style/indicatorStyle"/>
    </RelativeLayout>
    <include layout="@layout/divider"/>
    <RelativeLayout
        android:id="@+id/sex_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <TextView
            style="@style/settingTextStyle"
            android:layout_marginLeft="24dp"
            android:text="@string/sex"
            />
        <TextView
            android:id="@+id/sex_textview"
            style="@style/settingTextStyle"
            android:layout_marginRight="45dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            />
        <Button
            style="@style/indicatorStyle"/>
    </RelativeLayout>
    <include layout="@layout/divider"/>
    </LinearLayout>
</LinearLayout>