<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainappraisal_subclass_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/back_layout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="8dp"
                android:layout_height="14dp"
                android:background="@drawable/backarrow"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/subclass_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/bind_phoneNum"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_alignParentBottom="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="+86"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/phoneNum_Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:textSize="18sp"
            android:inputType="number"
            android:lines="1"
            android:hint="@string/enter_phoneNum"
            android:layout_marginLeft="60dp"
            android:layout_centerVertical="true"
            android:background="@color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp">
        <EditText
            android:id="@+id/vertifycode_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_toLeftOf="@id/vertify_code"
            android:lines="1"
            android:hint="@string/enter_verifycode"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:background="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/vertify_code"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/vertify_code"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/login_button_background"
            android:layout_centerVertical="true"
            android:text="@string/get_vertifycode"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/login_button_background"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

</LinearLayout>