<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="80dp">
    <LinearLayout
        android:id="@+id/weibo_button"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/weixin_button"
        android:layout_marginRight="70dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/share_weibo"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/weibo"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/weixin_button"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/wechat"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/weixin"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/friendcircle_button"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/weixin_button"
        android:layout_centerVertical="true"
        android:layout_marginLeft="70dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/share_wechat_timeline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendcircle"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>