<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:background="@color/transparent"
    >

    <ImageView
        android:id="@+id/background"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@drawable/signin3"
        android:scaleType="centerCrop"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:background="@drawable/signin4"
        android:layout_above="@+id/background"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/successsignin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"/>
    <TextView
        android:id="@+id/signintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        android:text="@string/contactus"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="188dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/signin2"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:gravity="center_horizontal"
        android:text="@string/signinad"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210dp"/>
    <TextView
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:gravity="center_horizontal"
        android:text="@string/signinad"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="228dp" />
    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/signin1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"/>
</FrameLayout>